solved alignment

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 
 .search input {
     height: 60px;
+    min-width: 200px;
     border: 0;
     outline: 0;
     /* outline: 0.5px solid rgb(255, 255, 255); */
